kubernetes/devnet/base/domain-node/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: domain-node-service
spec:
  selector:
    app: domain-node
  ports:
  - name: p2p
    protocol: TCP
    port: 30333
    targetPort: 30333
  - name: p2p-udp
    protocol: UDP
    port: 30333
    targetPort: 30333
  - name: dsn_port
    protocol: TCP
    port: 30433
    targetPort: 30433
  - name: dsn_port_udp
    protocol: UDP
    port: 30433
    targetPort: 30433
  - name: operator_p2p
    protocol: TCP
    port: 30334
  - name: rpc
    protocol: TCP
    port: 8944
    targetPort: 8944
  - name: prometheus
    protocol: TCP
    port: 9615
    targetPort: 9615
  type: ClusterIP
